functions/security.tf
resource "aws_security_group" "default-sg" {
    name = "default-sg"
    vpc_id = aws_vpc.default.id
    tags = {
      Name = "${var.vpc-name}-sg"
    }

    egress = [
        {
        cidr_blocks = ["0.0.0.0/0"]
        description = ""
        from_port = 0
        ipv6_cidr_blocks = []
        prefix_list_ids = []
        protocol = "-1"
        security_groups = []
        self = false
        to_port = 0
        }
    ]
    ingress = [
        {
        cidr_blocks = ["0.0.0.0/0"]
        description = ""
        from_port = 0
        ipv6_cidr_blocks = []
        prefix_list_ids = []
        protocol = "-1"
        security_groups = []
        self = false
        to_port = 0
        },
        {
        cidr_blocks = ["0.0.0.0/0"]
        description = "SSH"
        from_port = 22
        ipv6_cidr_blocks = []
        prefix_list_ids = []
        protocol = "tcp"
        security_groups = []
        self = false
        to_port = 22
        },
        {
        cidr_blocks = [
            "0.0.0.0/0"
        ]
        description = "HTTP"
        from_port = 80
        ipv6_cidr_blocks = []
        prefix_list_ids = []
        protocol = "tcp"
        security_groups = []
        self = false
        to_port = 80
        },
        {
        cidr_blocks = [
            "0.0.0.0/0"
        ]
        description = "HTTPS"
        from_port = 443
        ipv6_cidr_blocks = []
        prefix_list_ids = []
        protocol = "tcp"
        security_groups = []
        self = false
        to_port = 443
        },
         {
        cidr_blocks = [
            "0.0.0.0/0"
        ]
        description = "Custome port"
        from_port = 8090
        ipv6_cidr_blocks = []
        prefix_list_ids = []
        protocol = "tcp"
        security_groups = []
        self = false
        to_port = 8090
        }
        

    ]

  
}
